--- a/NZWalks.web/src/app/app.component.html
+++ b/NZWalks.web/src/app/app.component.html
@@ -1,6 +1,7 @@
 
 
-<app-hello></app-hello>
-<app-walk-detail></app-walk-detail>
-<app-region-detail></app-region-detail>
+<!-- <app-hello></app-hello> -->
+<!-- <app-walk-detail></app-walk-detail> -->
+ <app-walks></app-walks>
+<!-- <app-region-detail></app-region-detail> -->
 <router-outlet />
