--- a/NZWalks.web/src/app/app.component.html
+++ b/NZWalks.web/src/app/app.component.html
@@ -1,7 +1,3 @@
+<app-nav-bar></app-nav-bar>
 
-
-<!-- <app-hello></app-hello> -->
-<!-- <app-walk-detail></app-walk-detail> -->
- <app-walks></app-walks>
-<!-- <app-region-detail></app-region-detail> -->
 <router-outlet />
